fix: Increace code readability

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ h1 {
     font-size: 2.5rem;
 }
 
+h2 {
+    text-align: center;
+    padding-bottom: 1rem;
+}
+
 .countries-container {
     display: flex;
     flex-direction: row;
